// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Unallocated case view adapter should build a schema from the provided template and have sections maintain same order as schema object 1`] = `
{
  "data": {
    "my_date_field": "19/01/2020",
    "my_field": "Some Value",
  },
  "meta": {},
  "schema": {
    "defaultActionLabel": "Submit",
    "fields": [
      {
        "component": "heading",
        "props": {
          "label": "Case details",
          "name": "case-view-heading",
        },
        "validation": [],
      },
      {
        "component": "accordion",
        "props": {
          "name": "case-view",
          "sections": [
            {
              "items": [
                {
                  "component": "mapped-display",
                  "props": {
                    "component": "text",
                    "label": "My Field",
                    "name": "my_field",
                  },
                  "validation": [],
                },
                {
                  "component": "mapped-display",
                  "props": {
                    "component": "date",
                    "label": "My Date Field",
                    "name": "my_date_field",
                  },
                  "validation": [],
                },
              ],
              "title": "Test Stage 1",
            },
            {
              "items": [
                {
                  "component": "mapped-display",
                  "props": {
                    "component": "text",
                    "label": "My Field",
                    "name": "my_field",
                  },
                  "validation": [],
                },
                {
                  "component": "mapped-display",
                  "props": {
                    "component": "date",
                    "label": "My Date Field",
                    "name": "my_date_field",
                  },
                  "validation": [],
                },
              ],
              "title": "Test Stage 2",
            },
            {
              "items": [
                {
                  "component": "mapped-display",
                  "props": {
                    "component": "text",
                    "label": "My Field",
                    "name": "my_field",
                  },
                  "validation": [],
                },
                {
                  "component": "mapped-display",
                  "props": {
                    "component": "date",
                    "label": "My Date Field",
                    "name": "my_date_field",
                  },
                  "validation": [],
                },
              ],
              "title": "Test Stage 3",
            },
          ],
        },
        "validation": [],
      },
    ],
    "showPrimaryAction": false,
    "title": undefined,
  },
}
`;

exports[`Unallocated case view adapter should render SOMU Approval case view sections 1`] = `
{
  "data": {
    "ApprovalRequests": "Dummy Approval Role Complete - approved",
    "my_field": "Some Value",
    "stage_2_field_1": "Some Label",
  },
  "meta": {},
  "schema": {
    "defaultActionLabel": "Submit",
    "fields": [
      {
        "component": "heading",
        "props": {
          "label": "Case details",
          "name": "case-view-heading",
        },
        "validation": [],
      },
      {
        "component": "accordion",
        "props": {
          "name": "case-view",
          "sections": [
            {
              "items": [
                {
                  "component": "mapped-display",
                  "props": {
                    "component": "text",
                    "label": "My Field",
                    "name": "my_field",
                  },
                  "validation": [],
                },
              ],
              "title": "Test Stage 1",
            },
            {
              "items": [
                {
                  "component": "mapped-display",
                  "props": {
                    "component": "text",
                    "label": "Stage 2 Field 1",
                    "name": "stage_2_field_1",
                  },
                  "validation": [],
                },
                {
                  "component": "mapped-display",
                  "props": {
                    "component": "somu-list",
                    "label": "Approval Requests",
                    "name": "ApprovalRequests",
                  },
                  "validation": [],
                },
              ],
              "title": "Test Stage 2",
            },
          ],
        },
        "validation": [],
      },
    ],
    "showPrimaryAction": false,
    "title": undefined,
  },
}
`;

exports[`Unallocated case view adapter should render SOMU COMP Contributions case view sections 1`] = `
{
  "data": {
    "CaseContributions": "Dummy Test Area - Dummy Test Unit Overdue 01/09/2021",
    "my_field": "Some Value",
    "stage_2_field_1": "Some Label",
  },
  "meta": {},
  "schema": {
    "defaultActionLabel": "Submit",
    "fields": [
      {
        "component": "heading",
        "props": {
          "label": "Case details",
          "name": "case-view-heading",
        },
        "validation": [],
      },
      {
        "component": "accordion",
        "props": {
          "name": "case-view",
          "sections": [
            {
              "items": [
                {
                  "component": "mapped-display",
                  "props": {
                    "component": "text",
                    "label": "My Field",
                    "name": "my_field",
                  },
                  "validation": [],
                },
              ],
              "title": "Test Stage 1",
            },
            {
              "items": [
                {
                  "component": "mapped-display",
                  "props": {
                    "component": "text",
                    "label": "Stage 2 Field 1",
                    "name": "stage_2_field_1",
                  },
                  "validation": [],
                },
                {
                  "component": "mapped-display",
                  "props": {
                    "component": "somu-list",
                    "label": "Case contributions",
                    "name": "CaseContributions",
                  },
                  "validation": [],
                },
              ],
              "title": "Test Stage 2",
            },
          ],
        },
        "validation": [],
      },
    ],
    "showPrimaryAction": false,
    "title": undefined,
  },
}
`;

exports[`Unallocated case view adapter should render SOMU MPAM Contributions case view sections 1`] = `
{
  "data": {
    "CaseContributions": "Dummy Test Area - Dummy Test Unit Overdue 01/09/2021",
    "my_field": "Some Value",
    "stage_2_field_1": "Some Label",
  },
  "meta": {},
  "schema": {
    "defaultActionLabel": "Submit",
    "fields": [
      {
        "component": "heading",
        "props": {
          "label": "Case details",
          "name": "case-view-heading",
        },
        "validation": [],
      },
      {
        "component": "accordion",
        "props": {
          "name": "case-view",
          "sections": [
            {
              "items": [
                {
                  "component": "mapped-display",
                  "props": {
                    "component": "text",
                    "label": "My Field",
                    "name": "my_field",
                  },
                  "validation": [],
                },
              ],
              "title": "Test Stage 1",
            },
            {
              "items": [
                {
                  "component": "mapped-display",
                  "props": {
                    "component": "text",
                    "label": "Stage 2 Field 1",
                    "name": "stage_2_field_1",
                  },
                  "validation": [],
                },
                {
                  "component": "mapped-display",
                  "props": {
                    "component": "somu-list",
                    "label": "Case contributions",
                    "name": "CaseContributions",
                  },
                  "validation": [],
                },
              ],
              "title": "Test Stage 2",
            },
          ],
        },
        "validation": [],
      },
    ],
    "showPrimaryAction": false,
    "title": undefined,
  },
}
`;

exports[`Unallocated case view adapter should render checkbox groups with separate values 1`] = `
{
  "data": {
    "checkbox_group": "label A, label B",
  },
  "meta": {},
  "schema": {
    "defaultActionLabel": "Submit",
    "fields": [
      {
        "component": "heading",
        "props": {
          "label": "Case details",
          "name": "case-view-heading",
        },
        "validation": [],
      },
      {
        "component": "accordion",
        "props": {
          "name": "case-view",
          "sections": [
            {
              "items": [
                {
                  "component": "mapped-display",
                  "props": {
                    "choices": [
                      {
                        "label": "label A",
                        "name": "nameA",
                        "value": "valueA",
                      },
                      {
                        "label": "label B",
                        "name": "nameB",
                        "value": "valueB",
                      },
                    ],
                    "component": "checkbox-group",
                    "label": "Checkbox Group",
                    "name": "checkbox_group",
                  },
                  "validation": [],
                },
              ],
              "title": "Test Stage 1",
            },
          ],
        },
        "validation": [],
      },
    ],
    "showPrimaryAction": false,
    "title": undefined,
  },
}
`;

exports[`Unallocated case view adapter should render checkboxes with custom label 1`] = `
{
  "data": {
    "checkbox_field_1": "Test",
    "checkbox_field_2": "Test",
  },
  "meta": {},
  "schema": {
    "defaultActionLabel": "Submit",
    "fields": [
      {
        "component": "heading",
        "props": {
          "label": "Case details",
          "name": "case-view-heading",
        },
        "validation": [],
      },
      {
        "component": "accordion",
        "props": {
          "name": "case-view",
          "sections": [
            {
              "items": [
                {
                  "component": "mapped-display",
                  "props": {
                    "choices": [
                      {
                        "label": "Test",
                        "value": "Test",
                      },
                    ],
                    "component": "checkbox",
                    "label": "Checkbox Field 1",
                    "name": "checkbox_field_1",
                  },
                  "validation": [],
                },
                {
                  "component": "mapped-display",
                  "props": {
                    "choices": [
                      {
                        "label": "Test",
                        "value": "Test",
                      },
                    ],
                    "component": "checkbox",
                    "label": "Checkbox Field 1",
                    "name": "checkbox_field_2",
                    "showLabel": true,
                  },
                  "validation": [],
                },
              ],
              "title": "Test Stage 1",
            },
          ],
        },
        "validation": [],
      },
    ],
    "showPrimaryAction": false,
    "title": undefined,
  },
}
`;

exports[`Unallocated case view adapter should render with inverse default config 1`] = `
{
  "data": {
    "my_date_field": "2020-01-19",
    "my_field": "Some Value",
    "test_hidden_field": "TEST",
  },
  "meta": {},
  "schema": {
    "defaultActionLabel": "Submit",
    "fields": [
      {
        "component": "accordion",
        "props": {
          "name": "case-view",
          "sections": [
            {
              "items": [
                {
                  "component": "text",
                  "props": {
                    "disabled": true,
                    "label": "My Field",
                    "name": "my_field",
                  },
                  "validation": [],
                },
                {
                  "component": "date",
                  "props": {
                    "disabled": true,
                    "label": "My Date Field",
                    "name": "my_date_field",
                  },
                  "validation": [],
                },
                {
                  "component": "text",
                  "props": {
                    "disabled": true,
                    "label": "My Empty Field",
                    "name": "my_empty_field",
                  },
                  "validation": [],
                },
              ],
              "title": "Test Stage 1",
            },
            {
              "items": [
                {
                  "component": "text",
                  "props": {
                    "disabled": true,
                    "label": "My Field",
                    "name": "my_field",
                  },
                  "validation": [],
                },
                {
                  "component": "date",
                  "props": {
                    "disabled": true,
                    "label": "My Date Field",
                    "name": "my_date_field",
                  },
                  "validation": [],
                },
                {
                  "component": "text",
                  "props": {
                    "disabled": true,
                    "label": "My Empty Field",
                    "name": "my_empty_field",
                  },
                  "validation": [],
                },
              ],
              "title": "Test Stage 2",
            },
            {
              "items": [
                {
                  "component": "text",
                  "props": {
                    "disabled": true,
                    "label": "My Field",
                    "name": "my_field",
                  },
                  "validation": [],
                },
                {
                  "component": "date",
                  "props": {
                    "disabled": true,
                    "label": "My Date Field",
                    "name": "my_date_field",
                  },
                  "validation": [],
                },
                {
                  "component": "text",
                  "props": {
                    "disabled": true,
                    "label": "My Empty Field",
                    "name": "my_empty_field",
                  },
                  "validation": [],
                },
                {
                  "component": "checkbox",
                  "props": {
                    "disabled": true,
                    "label": "My Empty Field",
                    "name": "my_empty_field",
                  },
                  "validation": [],
                },
              ],
              "title": "Test Stage 3",
            },
          ],
        },
        "validation": [],
      },
    ],
    "showPrimaryAction": false,
    "title": undefined,
  },
}
`;
